<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:isScrollContainer="true">
	<LinearLayout
	    android:padding="50sp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_marginBottom="5dip"
	        android:textSize="26dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title" />
	    
	    <ImageView
	        android:paddingBottom="10sp"
	        android:contentDescription="@string/image_content_description"
	        android:layout_gravity="center_horizontal"
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:scaleType="fitCenter"
	        android:adjustViewBounds="true"
	        android:src="@drawable/irishrailwifi_logo" />
	
	    <TextView
	        android:layout_marginTop="5dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label_email_address" />
	
	    <EditText
	        android:hint="@string/hint_email_address"
	        android:inputType="textEmailAddress"
	        android:id="@+id/editText1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <requestFocus />
	    </EditText>

	    <LinearLayout
	        android:gravity="center_vertical"
            android:layout_marginTop="5dip"
	        android:orientation="horizontal"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
		    
		    <CheckBox
		        android:id="@+id/checkBox1"
		        android:paddingRight="5dip"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:checked="false" />
		
		    <TextView
		        android:id="@+id/textView1"
		        
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/label_terms_and_conditions" />
		    
	    </LinearLayout>
	    
		<Button
		    android:layout_marginTop="5dip"
		    android:id="@+id/button1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:text="@string/save_button_text" />
	    
	</LinearLayout>
</ScrollView>